; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/win-capture/extr_obfuscate.c_get_obfuscated_func.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/win-capture/extr_obfuscate.c_get_obfuscated_func.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @get_obfuscated_func(i32 %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca [128 x i8], align 16
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = getelementptr inbounds [128 x i8], [128 x i8]* %7, i64 0, i64 0
  %9 = load i8*, i8** %5, align 8
  %10 = call i32 @strcpy(i8* %8, i8* %9)
  %11 = getelementptr inbounds [128 x i8], [128 x i8]* %7, i64 0, i64 0
  %12 = load i32, i32* %6, align 4
  %13 = call i32 @deobfuscate_str(i8* %11, i32 %12)
  %14 = load i32, i32* %4, align 4
  %15 = getelementptr inbounds [128 x i8], [128 x i8]* %7, i64 0, i64 0
  %16 = call i8* @GetProcAddress(i32 %14, i8* %15)
  ret i8* %16
}

declare dso_local i32 @strcpy(i8*, i8*) #1

declare dso_local i32 @deobfuscate_str(i8*, i32) #1

declare dso_local i8* @GetProcAddress(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
